[project]
name = "envist"
dynamic = ["version"]
description = "A simple .env file parser with types for Python"
authors = [{name = "Md. Almas Ali", email = "almaspr3@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Almas-Ali/envist"
Documentation = "https://github.com/Almas-Ali/envist#readme"
Repository = "https://github.com/Almas-Ali/envist"
"Bug Tracker" = "https://github.com/Almas-Ali/envist/issues"

[tool.setuptools.packages.find]
where = ["envist"]
include = ["envist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.version]
path = "envist/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
