[metadata]
name = envist
version = 0.0.1
author = Md. Almas Ali
author_email = almaspr3@gmail.com
description = "Envist is a simple .env file parser for Python. It's a single file module with no dependencies."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Almas-Ali/envist
license = MIT

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .

