[metadata]
name = envist
version = 0.0.4
author = Md. Almas Ali
author_email = almaspr3@gmail.com
description = "Envist is a simple .env file parser for Python. It's a single file module with no dependencies."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Almas-Ali/envist
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
